version/0.24/_sources/api/solver/_autosummary/settings/premix_unburnt_temp.rst.txt
:orphan:

.. _premix_unburnt_temp:

premix_unburnt_temp
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.premix_unburnt_temp.premix_unburnt_temp
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

